# single-axis-motor-drive

./: README.md
linux-gui/: CMakeLists.txt
linux-gui/.cache/clangd/index/: main.cpp.ED00FB254F2ADA66.idx
linux-gui/libs/: configure.bash
linux-gui/libs/gtkmm-4.8.0/: ChangeLog
linux-gui/libs/gtkmm-4.8.0/untracked/docs/reference/: gtkmm-4.0.devhelp2  gtkmm-4.0.tag
linux-gui/libs/gtkmm-4.8.0/untracked/gdk/gdkmm/: applaunchcontext.cc  cairocontext.cc  cairocontext.h  clipboard.cc  contentformats.cc  contentformats.h  contentformatsbuilder.cc  contentformatsbuilder.h  contentprovider.cc  contentprovider.h  cursor.cc  cursor.h  device.cc  devicepad.cc  devicepad.h  devicetool.cc  display.cc  displaymanager.cc  drag.cc  dragsurface.cc  drawcontext.cc  drawcontext.h  drop.cc  drop.h  enums.cc  event.cc  frameclock.cc  frameclock.h  frametimings.cc  frametimings.h  glcontext.cc  glcontext.h  gltexture.cc  gltexture.h  memorytexture.cc  monitor.cc  monitor.h  paintable.cc  pixbuf.cc  pixbuf.h  (+26 more)
linux-gui/libs/gtkmm-4.8.0/untracked/gtk/gtkmm/: aboutdialog.cc  accessible.cc  actionable.cc  actionbar.cc  actionbar.h  adjustment.cc  appchooser.cc  appchooserbutton.cc  appchooserdialog.cc  appchooserdialog.h  appchooserwidget.cc  appchooserwidget.h  application.cc  applicationwindow.cc  applicationwindow.h  aspectframe.cc  aspectframe.h  assistant.cc  assistant.h  assistantpage.cc  assistantpage.h  binlayout.cc  binlayout.h  bitset.cc  bitset.h  boolfilter.cc  border.cc  border.h  box.cc  (+367 more)
linux-gui/libs/libs/lib/pkgconfig/: gtkmm-4.0.pc
linux-gui/src/: gui  main.cpp
(+2015 files in other folders)
